syntax = "proto3";

import "level.proto";
import "time_of_day.proto";

package wanderer.proto;

message SharedData {
  optional TimeOfDay time = 1;
}

message Save {
  optional int32 current_level_id = 1;
  optional SharedData shared = 2;
  repeated Level levels = 3;
}

